@@ -1,0 +1,37 @@
+name    = MooseX-POE
+author  = Chris Prather <chris@prather.org>
+author  = Ash Berlin <ash@cpan.org>
+author  = Chris Williams <chris@bingosnet.co.uk>
+author  = Yuval (nothingmuch) Kogman
+author  = Torsten Raudssus <getty@cpan.org>
+license = Perl_5
+copyright_holder = Chris Prather, Ash Berlin, Chris Williams, Yuval Kogman, Torsten Raudssus
+copyright_year   = 2010
+
+[Prereqs]
+Moose = 0.90
+POE = 1.004
+
+[Prereqs / TestRequires]
+Test::More = 0.90
+
+[@Basic]
+
+[AutoPrereqs]
+[Git::NextVersion]
+version_regexp = ^(.+)$
+
+[PkgVersion]
+[MetaConfig]
+[MetaJSON]
+[NextRelease]
+[PodSyntaxTests]
+[GithubMeta]
+[PodWeaver]
+[Repository]
+
+[MetaNoIndex]
+directory = ex
+
+[@Git]
+tag_format = %v
