@@ -1,4 +1,5 @@
 package MooseX::POE::Meta::Trait::Constructor;
+# ABSTRACT: Yeah something even more boring
 
 use Moose::Role;
 
@@ -40,17 +41,9 @@ no Moose::Role;
 
 __END__
 
-=head1 NAME
-
-MooseX::POE::Meta::Trait::Constructor
-
-=head1 VERSION
-
-This documentation refers to version 0.01.
-
 =head1 SYNOPSIS
 
-use MooseX::POE::Meta::Trait::Constructor;
+  use MooseX::POE::Meta::Trait::Constructor;
 
 =head1 DESCRIPTION
 
@@ -59,19 +52,5 @@ The MooseX::POE::Meta::Trait::Constructor class implements ...
 =head1 SUBROUTINES / METHODS
 
 There are no public methods.
-
-=head1 DEPENDENCIES
-
-Moose::Role
-
-=head1 AUTHOR
-
-Chris Prather (chris@prather.org)
-
-=head1 LICENCE
-
-Copyright 2009 by Chris Prather.
-
-This software is free.  It is licensed under the same terms as Perl itself.
 
 =cut
