@@ -1,4 +1,5 @@
 package MooseX::POE::Meta::Trait::SweetArgs;
+# ABSTRACT: Yes, its a trap... i mean trait
 
 use Moose::Role;
 
@@ -15,14 +16,6 @@ no Moose::Role;
 1;
 __END__
 
-=head1 NAME
-
-MooseX::POE::Meta::Trait::SweetArgs
-
-=head1 VERSION
-
-This documentation refers to version 0.01.
-
 =head1 SYNOPSIS
 
 use MooseX::POE::Meta::Trait::SweetArgs;
@@ -34,19 +27,3 @@ The MooseX::POE::Meta::Trait::SweetArgs class implements ...
 =head1 SUBROUTINES / METHODS
 
 There are no public methods.
-
-=head1 DEPENDENCIES
-
-Moose::Role
-
-=head1 AUTHOR
-
-Chris Prather (chris@prather.org)
-
-=head1 LICENCE
-
-Copyright 2009 by Chris Prather.
-
-This software is free.  It is licensed under the same terms as Perl itself.
-
-=cut
